--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Bloomberg Open API HTTP Proxy",
   "main": "server.js",
   "dependencies": {
-    "blpapi": "bloomberg/blpapi-node#node-v0.12",
     "bluebird": "^2.9.13",
     "bunyan": "^1.2.3",
     "convict": "^0.6.1",
@@ -15,7 +14,8 @@
     "optimist": "^0.6.1",
     "restify": "^2.8.4",
     "socket.io": "^1.2.1",
-    "ws": "^0.6.4"
+    "ws": "^0.6.4",
+    "node-memwatch": "marcominetti/node-memwatch"
   },
   "devDependencies": {
     "mocha": "^2.1.0",
@@ -23,7 +23,6 @@
     "request": "2.53.0",
     "should": "^5.0.1",
     "socket.io-client": "^1.3.4",
-    "tsd": "^0.5.7",
     "tslint": "^2.1.1",
     "typescript": "~1.4.1"
   },
